# StaticCRUD

./: db.sqlite3  pyproject.toml
category/: urls.py  views.py
category/migrations/: 0001_initial.py
login/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
login/migrations/: 0001_initial.py  0002_user_is_email_verified.py  0003_remove_user_is_email_verified.py  0004_user_is_email_verified.py  0005_userprofile.py
product/: form.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20210630_0944.py
templates/: base.html  categoryread.html  login.html  password_reset_done.html  productadd.html  productread.html  register.html  updatecategory.html  updateproduct.html  useradd.html  userread.html
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
userCRUD/: settings.py  urls.py
