[tool.poetry]
name = "StaticUserCRUD"
version = "0.1.0"
description = ""
authors = ["NavneetRajbanshi <navneetrajbanshi85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"
flake8 = "^3.9.2"
bandit = "^1.7.0"
Pillow = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
